# kt_node_rt

./: .gitignore  CMakeLists.txt  build.sh  build_ohos.sh
include/: KString.h  NodeString.h
src/: NodeString.cpp
